--- a/src/lib/network_peer/dune
+++ b/src/lib/network_peer/dune
@@ -1,6 +1,6 @@
 (library
  (name network_peer)
  (public_name network_peer)
- (libraries core async async_rpc_kernel)
+ (libraries core async async_rpc_kernel bin_prot_layouts)
  (instrumentation (backend bisect_ppx))
  (preprocess (pps ppx_deriving.eq ppx_coda ppx_version ppx_jane ppx_deriving_yojson)))
