--- a/src/lib/pickles_types/dune
+++ b/src/lib/pickles_types/dune
@@ -7,4 +7,5 @@
   (libraries
     snarky.backendless
     core_kernel
-    marlin_plonk_bindings_types))
+    marlin_plonk_bindings_types
+    bin_prot_layouts))
