--- a/src/lib/storage/dune
+++ b/src/lib/storage/dune
@@ -3,7 +3,7 @@
  (public_name storage)
  (inline_tests)
  (library_flags -linkall)
- (libraries core async async_extra logger)
+ (libraries core async async_extra logger bin_prot_layouts)
  (preprocess
   (pps ppx_version ppx_jane))
  (instrumentation (backend bisect_ppx))
