--- a/helm/block-producer/values.yaml
+++ b/helm/block-producer/values.yaml
@@ -6,6 +6,7 @@ coda:
   logLevel: "Debug"
   logSnarkWorkGossip: false
   logPrecomputedBlocks: false
+  logTxnPoolGossip: false
   image: codaprotocol/coda-daemon:0.0.16-beta7-develop
   privkeyPass: "naughty blue worm"
   seedPeers:
