--- a/helm/seed-node/values.yaml
+++ b/helm/seed-node/values.yaml
@@ -3,6 +3,7 @@ coda:
   runtimeConfig:
   generateGenesisProof: true
   logPrecomputedBlocks: true
+  logTxnPoolGossip: false
   maxConnections: 200
   image: codaprotocol/coda-daemon:0.0.12-beta-develop-589b507
   seedPeers:
