--- a/helm/archive-node/values.yaml
+++ b/helm/archive-node/values.yaml
@@ -4,6 +4,7 @@ coda:
   generateGenesisProof: true
   logLevel: "Info"
   logSnarkWorkGossip: false
+  logTxnPoolGossip: false
   image: codaprotocol/coda-daemon:0.0.16-beta7-develop
   privkeyPass: "naughty blue worm"
   seedPeers:
